# navipainter.github.io

./: Cargo.toml  Makefile.toml  Trunk.toml  index.html  style.css
docs/: index.html  navi-painter_github_io-821e3d1b04aa3d0a.js  navi-painter_github_io-821e3d1b04aa3d0a_bg.wasm  navi-painter_github_io-efcd33f564f0eff4_bg.wasm  navi-painter_github_io-f875ef5ab54d2580.js  navi-painter_github_io-f875ef5ab54d2580_bg.wasm
src/: main.rs
src/app/: mod.rs
src/app/routes/: about.rs  gallery.rs  home.rs  mod.rs  proyectos.rs
static/: galleries.json
