[package]
name = "navi-painter_github_io"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = "0.3"
serde = { version = "1.0", features = ["derive"] }
web-sys = { version = "0.3", features = ["console"] }
serde_json = "1.0"
